welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: illegal start of simple expression
    if ((getY())==h)){
                    ^ColumnByColumn:13: error: Missing closing brace `}' assumed here
def posFinale():Boolean={
^